--- a/rebar.config
+++ b/rebar.config
@@ -2,6 +2,5 @@
 
 {erl_opts, [debug_info]}.
 {deps, [
-    {epgsql, "4.1.0"},
-    {erlang_decimal, "0.4.3"}
+    {decimal, {git, "git@github.com:egobrain/decimal.git", {tag, "0.4.3"}}}
 ]}.
